--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^8.0",
-        "symfony/filesystem": "^6.0"
+        "symfony/filesystem": "^6.0",
+        "illuminate/support": "^8.0|^9.0"
     },
     "autoload": {
         "psr-4": {
