--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": "^8.0",
         "symfony/filesystem": "^6.0",
         "illuminate/support": "^8.0|^9.0",
-        "symfony/finder": "^6.1"
+        "symfony/finder": "^5.4|^6.1"
     },
     "autoload": {
         "psr-4": {
