--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     },
     "require-dev": {
         "pestphp/pest": "^1.21",
-        "symfony/var-dumper": "^6.1"
+        "symfony/var-dumper": "^5.4|^6.1"
     },
     "config": {
         "allow-plugins": {
