--- a/.github/workflows/laravel-lib-dev.yml
+++ b/.github/workflows/laravel-lib-dev.yml
@@ -10,8 +10,8 @@ jobs:
     uses: knutle/workflows/.github/workflows/laravel-lib-dev.yml@main
     with:
       os: >-
-        [ "windows-latest" ]
+        [ "ubuntu-latest", "windows-latest" ]
       php: >-
-        [ "8.1" ]
+        [ "8.0", "8.1" ]
       laravel: >-
         [ "8.*", "9.*" ]
